--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <section class="product">
             <div class="horizontal_slider">
                 <div class="slider_container">
-                    <a href="">
+                    <a href="detail_product.html">
 
                         <div class="item bg-light shadow-c">
                             <img class="img-product"
