--- a/register.html
+++ b/register.html
@@ -11,43 +11,58 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
-  <title>MakanYuk | Login
-  </title>
+  <title>MakanYuk | Register</title>
 </head>
-
 <body>
   <div class="loader">
     <div></div>
   </div>
   <div class="all">
-    <section class="header-back bg-light shadow-c">
-      <!-- <a href="index.html" class="fs-1">
-          <i class="text-black bi bi-chevron-left "></i>
-      </a> -->
-      <span class="text-black p-3 fs-2">Login</span>
+    <section class="header-back  fixed-top">
+      <div class="container bg-light shadow-c">
+        <a href="login.html" class="fs-1">
+            <i class="text-black bi bi-chevron-left "></i>
+        </a>
+        <span class="text-black p-3 fs-2">Register</span>
+      </div>
     </section>
+    <br>
+    <br>
+    <br>
     <section class="logo d-flex justify-content-around">
-      <img class="img-fluid my-5" width="80" src="logo.png " alt="">
+      <img class="img-fluid" width="80" src="logo.png" alt="">
     </section>
 
     <section class="p-4 ">
       <form>
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email">
+          <label for="name" class="form-label">Name</label>
+          <input type="text" class="form-control" id="name" placeholder="Enter your name">
         </div>
         <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter your password">
+          <label for="email" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="email" placeholder="Enter your email">
         </div>
-        <button type="submit" class="btn btn-orange-login mb-3">Login</button>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" id="password" placeholder="Enter your password">
+        </div>
+        <div class="mb-3">
+          <label for="address" class="form-label">Address</label>
+          <input type="text" class="form-control" id="address" placeholder="Enter your address">
+        </div>
+        <div class="mb-3">
+          <label for="phone" class="form-label">No Phone</label>
+          <input type="text" class="form-control" id="phone" placeholder="Enter your phone">
+        </div>
+        <div class="mb-3">
+          <label for="city" class="form-label">City</label>
+          <input type="text" class="form-control" id="city" placeholder="Enter your city">
+        </div>
+        <button type="submit" class="btn btn-orange-login mb-3">Register</button>
       </form>
-      <a href="register.html" class=" d-flex justify-content-around">Register if you don't have an account</a>
+      <a href="login.html" class=" d-flex justify-content-around">Already have an account ?</a>
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
     <br>
     <br>
     <br>
