--- a/detail_product.html
+++ b/detail_product.html
@@ -11,7 +11,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
-    <title>MakanYuk</title>
+    <title>MakanYuk | Detail</title>
 </head>
 
 <body>
@@ -80,7 +80,7 @@
                     <h6>IDR 12.289.000</h6>
                 </div>
                 <div class="p-2 bd-highlight ">
-                    <a href="" class="btn btn-orange">
+                    <a href="payment.html" class="btn btn-orange">
                         Order Now
                     </a>
                 </div>
