--- a/login.html
+++ b/login.html
@@ -31,14 +31,16 @@
     </section>
 
     <section class="p-4 ">
-      <form>
+      <!-- <form method="post" action="http://foodmarket.test:8080/api/login"> -->
+      <form method="post" action="login.html" onsubmit="login()">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email">
+          <input type="email" class="form-control" name="email" id="exampleInputEmail1" placeholder="Enter your email">
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter your password">
+          <input type="password" name="password" class="form-control" id="exampleInputPassword1"
+            placeholder="Enter your password">
         </div>
         <button type="submit" class="btn btn-orange-login mb-3">Login</button>
       </form>
@@ -88,7 +90,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="script.js"></script>
+  </script>
 </body>
 
 </html>
