feat: add profile pages

--- a/cart.html
+++ b/cart.html
@@ -44,7 +44,7 @@
         </section>
 
         <section class="data-orders bg-light">
-            <a href="" >
+            <a href="detail_order.html" >
                 <div class="row p-4 text-black">
                     <!-- list data col -->
                     <div class="img-order col-2 ">
