--- a/login.html
+++ b/login.html
@@ -32,14 +32,14 @@
 
     <section class="p-4 ">
       <!-- <form method="post" action="http://foodmarket.test:8080/api/login"> -->
-      <form method="post" action="login.html" onsubmit="login()">
+      <form id="form-login" >
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" name="email" id="exampleInputEmail1" placeholder="Enter your email">
+          <input type="email" class="form-control" name="email" id="email-form" placeholder="Enter your email">
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" name="password" class="form-control" id="exampleInputPassword1"
+          <input type="password" name="password" class="form-control" id="password-form"
             placeholder="Enter your password">
         </div>
         <button type="submit" class="btn btn-orange-login mb-3">Login</button>
