--- a/payment.html
+++ b/payment.html
@@ -34,7 +34,7 @@
         <br>
 
         <section class="data-orders bg-light">
-            <a href="">
+            <a>
                 <div class="row p-4 text-black">
                     <!-- list data col -->
                     <div class="img-order col-2 ">
@@ -52,6 +52,105 @@
                         </p>
                     </div>
                 </div>
+            </a>
+        </section>
+
+        <section class="p-4">
+            <div class="data-transaction">
+                <span class="fw-bold"> Detail Transaction: </span>
+            </div>
+            <div class="main-data-transaction mt-3">
+                <div class="row text-black ">
+                    <!-- list data col -->
+                    <div class="col-3">
+                        <span>Burger</span>
+                    </div>
+                    <div class="col-9" align="right">
+                        <p>
+                            <span class="">Rp. 18.390</span>
+                        </p>
+                    </div>
+
+                    <div class="col-3">
+                        <span>Driver</span>
+                    </div>
+                    <div class="col-9" align="right">
+                        <p>
+                            <span class="">Rp. 40.000</span>
+                        </p>
+                    </div>
+
+                    <div class="col-3">
+                        <span>Total</span>
+                    </div>
+                    <div class="col-9" align="right">
+                        <p class="text-success fw-bold">
+                            <span class="">Rp. 60.000</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+           
+        </section>
+
+        <section class="delivery px-4">
+            <div class="data-transaction">
+                <span class="fw-bold">Delivery to: </span>
+            </div>
+            <div class="main-data-transaction mt-3">
+                <div class="row text-black ">
+                    <!-- list data col -->
+                    <div class="col-3">
+                        <span>Name</span>
+                    </div>
+                    <div class="col-9" align="right">
+                        <p>
+                            <span class="">Rizki Darmawan</span>
+                        </p>
+                    </div>
+
+                    <div class="col-3">
+                        <span>Phone No.</span>
+                    </div>
+                    <div class="col-9" align="right">
+                        <p>
+                            <span class="">08934763276</span>
+                        </p>
+                    </div>
+
+                    <div class="col-3">
+                        <span>Address</span>
+                    </div>
+                    <div class="col-9" align="right">
+                        <p class="">
+                            <span class="">Karanggeng RT 1 RW Gunungpati</span>
+                        </p>
+                    </div>
+
+                    <div class="col-3">
+                        <span>House No.</span>
+                    </div>
+                    <div class="col-9" align="right">
+                        <p class="">
+                            <span class="">A1 Pura</span>
+                        </p>
+                    </div>
+
+                    <div class="col-3">
+                        <span>City</span>
+                    </div>
+                    <div class="col-9" align="right">
+                        <p class="">
+                            <span class="">Semarang</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="p-4">
+            <a href="" class="btn btn-orange col-12">
+                Order Now
             </a>
         </section>
 
